Need correction in time and implement for one Philosopher

--- a/philo3/Makefile
+++ b/philo3/Makefile
@@ -8,10 +8,12 @@ INCLUDES = -I./mandatory/includes
 CFLAGS = -Wall -Wextra -Werror -g3 $(INCLUDES)
 
 SRC_PATH = ./mandatory/sources
-SRC = $(SRC_PATH)/main.c $(SRC_PATH)/utils.c $(SRC_PATH)/check_args.c $(SRC_PATH)/init_all.c $(SRC_PATH)/free_functions.c $(SRC_PATH)/create_thread.c
+SRC = $(SRC_PATH)/main.c $(SRC_PATH)/utils.c $(SRC_PATH)/check_args.c $(SRC_PATH)/init_all.c $(SRC_PATH)/free_functions.c $(SRC_PATH)/thread_gestion.c \
+		$(SRC_PATH)/monitoring.c $(SRC_PATH)/philo_routine.c $(SRC_PATH)/eat.c
 
 OBJ_PATH = ./mandatory/tmp
-OBJ = $(OBJ_PATH)/main.o $(OBJ_PATH)/utils.o $(OBJ_PATH)/check_args.o $(OBJ_PATH)/init_all.o $(OBJ_PATH)/free_functions.o $(OBJ_PATH)/create_thread.o
+OBJ = $(OBJ_PATH)/main.o $(OBJ_PATH)/utils.o $(OBJ_PATH)/check_args.o $(OBJ_PATH)/init_all.o $(OBJ_PATH)/free_functions.o $(OBJ_PATH)/thread_gestion.o \
+		$(OBJ_PATH)/monitoring.o $(OBJ_PATH)/philo_routine.o $(OBJ_PATH)/eat.o
 NAME = philo
 
 all: $(NAME)
